--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -27,7 +27,7 @@
             </a>
           </li>
           <li>
-            <a class="px-2" href="#" (click)="auth.logout($event)">
+            <a class="px-2" routerLink="/" (click)="auth.logout($event)">
               Logout
             </a>
           </li>
