--- a/src/app/clip/clip.component.html
+++ b/src/app/clip/clip.component.html
@@ -13,8 +13,7 @@
     <!-- Video Editor -->
     <div class="relative aspect-w-16 aspect-h-9">
       <!-- Video Player -->
-      <video controls #videoPlayer crossorigin
-        class="video-js vjs-theme-forest mx-auto">
+      <video controls #videoPlayer crossorigin class="video-js vjs-theme-forest mx-auto">
       </video>
     </div>
   </div>
