--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -13,17 +13,11 @@
     <ng-template #uploadEditorCtr>
       <!-- Upload Dropbox -->
       <ng-container *ngIf="!nextStep; else uploadFormCtr">
-        <div app-event-blocker 
-        (dragend)="isDragover = false" 
-        (dragover)="isDragover = true"
-        (dragenter)="isDragover = true" 
-        (dragleave)="isDragover = false" 
-        (mouseleave)="isDragover = false"
-        (drop)="storeFile($event)" 
-        [ngClass]="{ 
+        <div app-event-blocker (dragend)="isDragover = false" (dragover)="isDragover = true"
+          (dragenter)="isDragover = true" (dragleave)="isDragover = false" (mouseleave)="isDragover = false"
+          (drop)="storeFile($event)" [ngClass]="{ 
             'bg-indigo-400 border-indigo-400 border-solid': isDragover
-          }" 
-          class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed
+          }" class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed
             border-gray-400 transition duration-500 hover:text-white
             hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl">
           <h5>Drop your file here (mp4 only!)</h5>
@@ -61,10 +55,12 @@
           </div>
 
           <div class="mt-4 text-right">
-            <button [disabled]="inSubmission" [ngClass]="{
+            <button [disabled]="inSubmission" 
+            [ngClass]="{
                 'opacity-50': inSubmission,
                 'hover:bg-indigo-700': !inSubmission
-              }" type="submit"
+              }" 
+              type="submit"
               class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 focus:outline-none">
               Publish
             </button>
