--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -22,7 +22,7 @@
 
       <!-- Image -->
       <a href="#">
-        <img class="card-img-top rounded-tl-2xl w-full" [src]="clip.screenshotURL" crossorigin>
+        <!-- <img class="card-img-top rounded-tl-2xl w-full" [src]="clip.screenshotURL" crossorigin> -->
       </a>
 
       <!-- Body -->
