--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -62,7 +62,7 @@
               }" 
               type="submit"
               class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 focus:outline-none">
-              Publish
+              Submit
             </button>
           </div>
         </form>
