--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -32,10 +32,10 @@
         <a [routerLink]="['/', 'clip', clip.docID]" class="font-bold mb-2">
           {{ clip.title }}
         </a>
-        <a (click)="copyToClipboard($event, clip.docID)" href="#"
+        <!-- <a (click)="copyToClipboard($event, clip.docID)" href="#"
           class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded">
           Copy Link
-        </a>
+        </a> -->
 
       </div>
 
