--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -4,10 +4,10 @@
     <div class="font-bold mb-6">Upload Video</div>
 
     <ng-container>
-      <span *ngIf="!ffmpegService.isReady; else uploadEditorCtr"
+      <!-- <span *ngIf="!ffmpegService.isReady; else uploadEditorCtr"
         class="material-icons text-center text-6xl p-8 animate-spin">
         settings
-      </span>
+      </span> -->
     </ng-container>
 
     <ng-template #uploadEditorCtr>
@@ -21,9 +21,9 @@
             border-gray-400 transition duration-500 hover:text-white
             hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl">
           <h5>Drop your file here (mp4 only!)</h5>
-          <span *ngIf="ffmpegService.isRunning" class="material-icons text-center text-6xl p-8 animate-spin">
+          <!-- <span *ngIf="ffmpegService.isRunning" class="material-icons text-center text-6xl p-8 animate-spin">
             autorenew
-          </span>
+          </span> -->
         </div>
         <input type="file" class="mt-4" (change)="storeFile($event)">
       </ng-container>
@@ -40,12 +40,12 @@
           <!-- Screenshots -->
           <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
           <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-            <div *ngFor="let screenshot of screenshots" class="border-8 cursor-pointer" [ngClass]="{
+            <!-- <div *ngFor="let screenshot of screenshots" class="border-8 cursor-pointer" [ngClass]="{
                 'border-green-400': screenshot === selectedScreenshot,
                 'border-transparent': screenshot !== selectedScreenshot
               }" (click)="selectedScreenshot = screenshot">
               <img [src]="screenshot | safeURL">
-            </div>
+            </div> -->
           </div>
 
           <!-- Title -->
